syntax = "proto3";
package symphony.incentives;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/incentives/types";

// Params holds parameters for the incentives module
message Params {
  // distr_epoch_identifier is what epoch type distribution will be triggered by
  // (day, week, etc.)
  string distr_epoch_identifier = 1
      [ (gogoproto.moretags) = "yaml:\"distr_epoch_identifier\"" ];

  // group_creation_fee is the fee required to create a new group
  // It is only charged to all addresses other than incentive module account
  // or addresses in the unrestricted_creator_whitelist
  repeated cosmos.base.v1beta1.Coin group_creation_fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // unrestricted_creator_whitelist is a list of addresses that are
  // allowed to bypass restrictions on permissionless Group
  // creation. In the future, we might expand these to creating gauges
  // as well.
  // The goal of this is to allow a subdao to manage incentives efficiently
  // without being stopped by 5 day governance process or a high fee.
  // At the same time, it prevents spam by having a fee for all
  // other users.
  repeated string unrestricted_creator_whitelist = 3
      [ (gogoproto.moretags) = "yaml:\"unrestricted_creator_whitelist\"" ];

  // internal_uptime is the uptime used for internal incentives on pools that
  // use NoLock gauges (currently only Concentrated Liquidity pools).
  //
  // Since Group gauges route through internal gauges, this parameter affects
  // the uptime of those incentives as well (i.e. distributions through volume
  // splitting incentives will use this uptime).
  google.protobuf.Duration internal_uptime = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"internal_uptime\""
  ];
  // min_value_for_distribution is the minimum amount a token must be worth
  // in order to be eligible for distribution. If the token is worth
  // less than this amount (or the route between the two denoms is not
  // registered), it will not be distributed and is forfeited to the remaining
  // distributees that are eligible.
  cosmos.base.v1beta1.Coin min_value_for_distribution = 5
      [ (gogoproto.nullable) = false ];
}
